Replaced labels in the Monitoring guide.

--- a/doc-Monitoring_Alerts_and_Reporting/RSS.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/RSS.adoc
@@ -10,4 +10,4 @@ You can subscribe to the RSS feeds and have them delivered to an RSS reader.
 
 image::images/2308.png[]
 
-You can filter the list of RSS feeds by administrative role using the [label]#Admin Role Filter# drop down. 	
+You can filter the list of RSS feeds by administrative role using the #Admin Role Filter# drop down. 	
