--- a/doc-Monitoring_Alerts_and_Reporting/chap-Cloud_Intelligence.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/chap-Cloud_Intelligence.adoc
@@ -5,7 +5,7 @@
 Cloud Intelligence shows your virtual environments events, reports, and configurable alerts.
 This information supports better information technology decision making and predictions for future virtual machine management. 
 
-When you log in to the console, it brings you directly to the [label]#Cloud Intelligence Dashboard# page by default.
+When you log in to the console, it brings you directly to the #Cloud Intelligence Dashboard# page by default.
 The console uses widgets to organize this page, providing you with a default set of commonly used widgets.
 The configuration items on these widgets are clickable allowing you to drill down directly to a referenced item. 
 
