--- a/doc-Monitoring_Alerts_and_Reporting/report_menus.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/report_menus.adoc
@@ -10,12 +10,12 @@ You must add it to a report menu.
 
 The report menu is a hierarchical structure that consists of the following components: 
 
-* The [label]#Top Level# under which the accordions are shown.
-  ([label]#Top Level# is only displayed when you are in the report menu editor.)  					
+* The #Top Level# under which the accordions are shown.
+  (#Top Level# is only displayed when you are in the report menu editor.)  					
 * Accordions that are general categories for the reports.
-  The defaults supplied are [label]#Configuration Management#, [label]#Migration Readiness, Operations#, [label]#VM Sprawl#, [label]#Relationships#, and [label]#Events#.
+  The defaults supplied are #Configuration Management#, #Migration Readiness, Operations#, #VM Sprawl#, #Relationships#, and #Events#.
 * Folders that are used to further organize reports within an accordion.
-  For example, under the [label]#Configuration Management#, you would see folders for virtual machines, hosts, and other virtual infrastructure components. 
+  For example, under the #Configuration Management#, you would see folders for virtual machines, hosts, and other virtual infrastructure components. 
 * Reports that are stored directly in the folders. 
 
 :leveloffset: 3
