--- a/doc-Monitoring_Alerts_and_Reporting/topics/Chargeback_Rates.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/Chargeback_Rates.adoc
@@ -1,6 +1,6 @@
 = Chargeback Rates
 
-CloudForms Management Engine provides a default set of rates for calculating chargeback costs, but you can create your own set of computing and storage costs by navigating to menu:Cloud Intelligence[Chargeback] and clicking the [label]#Rates# accordion. 
+CloudForms Management Engine provides a default set of rates for calculating chargeback costs, but you can create your own set of computing and storage costs by navigating to menu:Cloud Intelligence[Chargeback] and clicking the #Rates# accordion. 
 
 Chargeback costs are computed using a set formula based on hourly cost per unit and hourly usage. 
 
