--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_access_Usage_data.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_access_Usage_data.adoc
@@ -5,13 +5,13 @@
 
 .Procedure: To Access Usage Data
 . Navigate to menu:Cloud Intelligence[Usage]. 
-. In the [label]#Options# area, select a [label]#Date#.
+. In the #Options# area, select a #Date#.
   More choices will display. 
 +
 
 image::images/2307.png[]
 
 
-* From [label]#Period#, select either [label]#Day# or [label]#Hour#. If you select [label]#Hour#, you will be prompted for which hour in UTC time. 
-* From [label]#Category#, select the category for the tag. 
-. * From [label]#Entry#, select the tag from within the category that you want usage data for. 
+* From #Period#, select either #Day# or #Hour#. If you select #Hour#, you will be prompted for which hour in UTC time. 
+* From #Category#, select the category for the tag. 
+. * From #Entry#, select the tag from within the category that you want usage data for. 
