--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_copy_an_Alert.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_copy_an_Alert.adoc
@@ -5,7 +5,7 @@ You can copy an existing alert to create a new alert that is similar to the exis
 
 .Procedure: To Copy an Alert
 . Navigate to menu:Control[Explorer]. 
-. Click on the [label]#Alert# accordion, then click on the alert that you want to copy. 
-. Click  image:images/1847.png[] ([label]#Configuration#),  image:images/1859.png[] ([label]#Copy this Alert#). Click btn:[OK] to confirm. 
+. Click on the #Alert# accordion, then click on the alert that you want to copy. 
+. Click  image:images/1847.png[] (#Configuration#),  image:images/1859.png[] (#Copy this Alert#). Click btn:[OK] to confirm. 
 . Make the required changes. 
 . Click btn:[Add]. 
