--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_create_a_Hardware_Reconfigure_Alert.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_create_a_Hardware_Reconfigure_Alert.adoc
@@ -5,15 +5,15 @@ Use a hardware reconfigure alert to detect changes to the amount of memory or th
 
 .Procedure: To Create a Hardware Reconfigure Alert
 . Navigate to menu:Control[Explorer]. 
-. Click the [label]#Alerts# accordion, then click  image:images/1847.png[] ([label]#Configuration#),  image:images/1848.png[] ([label]#Add a new Alert#). 
-. In the [label]#Info# area: 
+. Click the #Alerts# accordion, then click  image:images/1847.png[] (#Configuration#),  image:images/1848.png[] (#Add a new Alert#). 
+. In the #Info# area: 
 +
 * Type in a description for the alert. 
-* From [label]#Based On#, select [label]#VM and Instance#. 
-* From [label]#What to Evaluate#, select [label]#Hardware Reconfigured#. 
-* In [label]#Notification Frequency#, select how often you want to be notified if hardware reconfiguration is detected. 
+* From #Based On#, select #VM and Instance#. 
+* From #What to Evaluate#, select #Hardware Reconfigured#. 
+* In #Notification Frequency#, select how often you want to be notified if hardware reconfiguration is detected. 
 
-. From [label]#Hardware Attribute#, select Number of CPUs. From the next dropdown, select [label]#Decreased#.
+. From #Hardware Attribute#, select Number of CPUs. From the next dropdown, select #Decreased#.
 +
 image::images/1973.png[]
 
