--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_create_a_Normal_Operating_Range_Alert.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_create_a_Normal_Operating_Range_Alert.adoc
@@ -7,21 +7,21 @@ See the _General Configuration_ guide, available from https://access.redhat.com/
 
 .Procedure: To Create a Normal Operating Range Alert
 . Navigate to menu:Control[Explorer]. 
-. Click the [label]#Alerts# accordion, then click  image:images/1847.png[] ([label]#Configuration#),  image:images/1848.png[] ([label]#Add a new Alert#). 
-. In the [label]#Info# area: 
+. Click the #Alerts# accordion, then click  image:images/1847.png[] (#Configuration#),  image:images/1848.png[] (#Add a new Alert#). 
+. In the #Info# area: 
 +
-* Type in a [label]#Description# for the alert. 
-* From [label]#Based On#, select [label]#VM and Instance#. 
-* For [label]#What to Evaluate#, select [label]#Normal Operating Range#. 
-* In [label]#Notification Frequency#, select how often you want to be notified if the performance threshold is reached. 
+* Type in a #Description# for the alert. 
+* From #Based On#, select #VM and Instance#. 
+* For #What to Evaluate#, select #Normal Operating Range#. 
+* In #Notification Frequency#, select how often you want to be notified if the performance threshold is reached. 
 
-. Set the threshold in the [label]#Normal Operating Range Parameters# area. 
+. Set the threshold in the #Normal Operating Range Parameters# area. 
 +
 
 image::images/1976.png[]
 +
-* From [label]#Performance Field#, select the field to check and whether you want to be notified if the field is exceeded or fell below. 
-* In [label]#Field Meets Criteria for#, select the amount of time that the threshold requires to be met to trigger the alert. 
+* From #Performance Field#, select the field to check and whether you want to be notified if the field is exceeded or fell below. 
+* In #Field Meets Criteria for#, select the amount of time that the threshold requires to be met to trigger the alert. 
 
 . After setting the parameters, you then select what you want the alert to do.
   You can send an email, create an SNMP Trap, let the alert show on the timeline, or send a management event to start an automation process.
