--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_evaluate_an_Alert.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_evaluate_an_Alert.adoc
@@ -3,13 +3,13 @@
 
 .Procedure: To Evaluate an Alert
 . Navigate to menu:Control[Explorer]. 
-. Click the [label]#Actions# accordion, then click  image:images/1847.png[] ([label]#Configuration#),  image:images/1848.png[] ([label]#Add a new Action#). 
-. Type in a [label]#Description# for the action. 
+. Click the #Actions# accordion, then click  image:images/1847.png[] (#Configuration#),  image:images/1848.png[] (#Add a new Action#). 
+. Type in a #Description# for the action. 
 +
 
 image::images/1911.png[]
 
-. Select [label]#Evaluate Alerts# from [label]#Action Type#. 
+. Select #Evaluate Alerts# from #Action Type#. 
 . Select the alerts to be evaluated and click  image:images/1876.png[] (Move selected Alerts into this Action). Use the kbd:[Ctrl] key to select multiple alerts. 
 +
 
