--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_export_a_Policy_Policy_Profile_or_an_Alert.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_export_a_Policy_Policy_Profile_or_an_Alert.adoc
@@ -3,12 +3,12 @@
 
 
 . Navigate to menu:Control[Import/Export]. 
-. From the [label]#Export dropdown#, select policy profiles, policies, or alerts, depending on what you want to export. 
+. From the #Export dropdown#, select policy profiles, policies, or alerts, depending on what you want to export. 
 +
 
 image::images/2013.png[]
 
-. From the [label]#Available Profiles# or [label]#Available Policies# or [label]#Available Alerts# list, select the items to export.
+. From the #Available Profiles# or #Available Policies# or #Available Alerts# list, select the items to export.
   Use the kbd:[Ctrl] key to select multiple items to export into one file. 
 . Click btn:[Export]. 
 . Follow the prompts in your browser to save the file. 
