--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_export_a_report.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_export_a_report.adoc
@@ -6,6 +6,6 @@ To do this use the export and import feature of reports.
 
 .Procedure: To Export a Report
 . Navigate to menu:Cloud Intelligence[Reports]. 
-. In the [label]#Import/Export# accordion, click [label]#Custom Reports#. 
-. In the [label]#Export# area, select the reports to export. 
+. In the #Import/Export# accordion, click #Custom Reports#. 
+. In the #Export# area, select the reports to export. 
 . Click btn:[Export]. 
