--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_generate_a_single_report.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_generate_a_single_report.adoc
@@ -3,8 +3,8 @@
 
 .Procedure: To Generate a Single Report
 . Navigate to menu:Cloud Intelligence[Reports] 
-. Click the [label]#Reports# accordion and select the report you want to view. 
-. Click  image:images/1847.png[] ([label]#Queue#), 
+. Click the #Reports# accordion and select the report you want to view. 
+. Click  image:images/1847.png[] (#Queue#), 
 . The report generation is placed on the queue and its status shows in the reports page. 
 +
 
