--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_import_a_report.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_import_a_report.adoc
@@ -6,7 +6,7 @@ To do this use the export and import feature of reports.
 
 .Procedure: To Import a Report
 . Navigate to menu:Cloud Intelligence[Reports]. 
-. In the [label]#Import/Export# accordion, click [label]#Custom Reports#. 
-. In the [label]#Import# area, click btn:[Browse] to select an import file. 
-. To overwrite an existing report with the same menu name, select [label]#Overwrite existing reports#. 
-. Click btn:[Upload] to import the report to the [label]#Company-Custom# folder. 
+. In the #Import/Export# accordion, click #Custom Reports#. 
+. In the #Import# area, click btn:[Browse] to select an import file. 
+. To overwrite an existing report with the same menu name, select #Overwrite existing reports#. 
+. Click btn:[Upload] to import the report to the #Company-Custom# folder. 
