--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_manage_Report_Menu_Folders.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_manage_Report_Menu_Folders.adoc
@@ -4,7 +4,7 @@
 .Procedure: To Manage Report Menu Folders
 . Log in to the console as a user who is assigned either the super administrator or administrator account role. 
 . Navigate to menu:Cloud Intelligence[Reports]. 
-. Click the [label]#Edit Report Menus# accordion. 
+. Click the #Edit Report Menus# accordion. 
 . Click the role whose menus you want to customize. 
 . Click on the accordion name you want to organize or add folders to. 
 +
