--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_run_a_scheduled_report_immediately.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_run_a_scheduled_report_immediately.adoc
@@ -3,5 +3,5 @@
 
 .Procedure: To Run a Scheduled Report Immediately
 . Navigate to menu:Cloud Intelligence[Reports]. 
-. Click the [label]#Schedules# accordion and select the schedule you want to run. 
-. Click  image:images/1847.png[] ([label]#Configuration#), then click  image:images/1847.png[] ([label]#Queue#). 
+. Click the #Schedules# accordion and select the schedule you want to run. 
+. Click  image:images/1847.png[] (#Configuration#), then click  image:images/1847.png[] (#Queue#). 
