--- a/doc-Monitoring_Alerts_and_Reporting/viewing_reports.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/viewing_reports.adoc
@@ -6,7 +6,7 @@ Once you have created a schedule for a report, you can view it at any time after
 
 .Procedure: To View a Report
 . Navigate to menu:Cloud Intelligence[Reports]. 
-. Click the [label]#Saved Reports# accordion or the [label]#Reports# accordion. 
+. Click the #Saved Reports# accordion or the #Reports# accordion. 
 . Click on the instance of the report you want to view. 
 
 :leveloffset: 3
