--- a/doc-Monitoring_Alerts_and_Reporting/topics/Copying_a_report.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/Copying_a_report.adoc
@@ -5,10 +5,10 @@ Then, you only need to make minor edits instead of creating an entirely new repo
 
 
 . Navigate to menu:Cloud Intelligence[Reports]. 
-. Click the [label]#Reports# accordion and select the report that you want to copy. 
-. Click  image:images/1847.png[] ([label]#Configuration#), then click  image:images/1859.png[] ([label]#Copy this report#). 
-. On the Columns tab, edit the [label]#Basic Report Info# area to include a new [label]#Menu Name#.
-  Each [label]#Menu Name# must be unique. 
+. Click the #Reports# accordion and select the report that you want to copy. 
+. Click  image:images/1847.png[] (#Configuration#), then click  image:images/1859.png[] (#Copy this report#). 
+. On the Columns tab, edit the #Basic Report Info# area to include a new #Menu Name#.
+  Each #Menu Name# must be unique. 
 . Make any other changes you need.
   See <<_adding_a_report,Adding a Report>> for details on the changes you can make. 
 . Click btn:[Add]. 
