--- a/doc-Monitoring_Alerts_and_Reporting/topics/Editing_a_Report.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/Editing_a_Report.adoc
@@ -6,7 +6,7 @@ Only administrators and super administrators of CloudForms Management Engine can
 
 .Procedure: To Edit a Report
 . Navigate to menu:Cloud Intelligence[Report]. 
-. Click the [label]#Reports# accordion and select the report you want to edit. 
-. Click  image:images/1847.png[] ([label]#Configuration#),  image:images/1851.png[] ([label]#Edit this Report#). 
+. Click the #Reports# accordion and select the report you want to edit. 
+. Click  image:images/1847.png[] (#Configuration#),  image:images/1851.png[] (#Edit this Report#). 
 . Make any changes you need. 
 . Click btn:[Save]. 
