--- a/doc-Monitoring_Alerts_and_Reporting/topics/Expression_Alerts.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/Expression_Alerts.adoc
@@ -6,15 +6,15 @@ In the example below, we look for a host whose datastore has less than 5% free s
 
 .Procedure: To Create an Expression Alert
 . Navigate to menu:Control[Explorer]. 
-. Click on the [label]#Alerts# accordion, then click  image:images/1847.png[] ([label]#Configuration#),  image:images/1848.png[] ([label]#Add a new Alert#). 
-. In the [label]#Info# area: 
+. Click on the #Alerts# accordion, then click  image:images/1847.png[] (#Configuration#),  image:images/1848.png[] (#Add a new Alert#). 
+. In the #Info# area: 
 +
 image::images/1985.png[]
 +
 * Type in a description for the alert. 
-* From [label]#Based On#, select [label]#Host#. 
-* For [label]#What to Evaluate#, select [label]#Expression (Custom)#. 
-* In [label]#Notification Frequency#, select how often you want to be notified if the expression is evaluated to true. 
+* From #Based On#, select #Host#. 
+* For #What to Evaluate#, select #Expression (Custom)#. 
+* In #Notification Frequency#, select how often you want to be notified if the expression is evaluated to true. 
 
 . Use the expression editor to create your expression.
   This is the same expression editor used to create Conditions.
@@ -22,7 +22,7 @@ image::images/1985.png[]
 +
 image::images/1986.png[]
 +
-. Click  image:images/1863.png[] ([label]#Commit expression element changes#) to accept the expression. 
+. Click  image:images/1863.png[] (#Commit expression element changes#) to accept the expression. 
 . After setting the parameters, you then select what you want the alert to do.
   You can send an email, create an SNMP Trap, let the alert show on the timeline, or send a management event to start an automation process. 
 . Click btn:[Add]. 
