--- a/doc-Monitoring_Alerts_and_Reporting/topics/Importing_a_Widget.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/Importing_a_Widget.adoc
@@ -4,6 +4,6 @@ You can share widgets between appliances using the export and import features.
 
 .Procedure: To Import a Widget
 . Navigate to menu:Cloud Intelligence[Reports]. 
-. In the [label]#Import/Export# accordion, click [label]#Widgets#. 
-. In the [label]#Import# area, click btn:[Browse] to select an import file. 
+. In the #Import/Export# accordion, click #Widgets#. 
+. In the #Import# area, click btn:[Browse] to select an import file. 
 . Click btn:[Upload]. 
