--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_access_and_use_a_Timeline.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_access_and_use_a_Timeline.adoc
@@ -12,12 +12,12 @@ Amazon does not provide events, so CloudForms Management Engine does not support
 
 .Procedure: To Access and Use a Timeline
 . Navigate to menu:Cloud Intelligence[Timelines]. 
-. From the accordion on the left, click a category of [label]#Timeline#. 
+. From the accordion on the left, click a category of #Timeline#. 
 +
-* Select [label]#Configuration Management# to see when items were brought under management. 
-* Select [label]#Events# to view timelines related to operations and changes in configuration. 
+* Select #Configuration Management# to see when items were brought under management. 
+* Select #Events# to view timelines related to operations and changes in configuration. 
 
 . Drag the relevant time band, such as hour, day, or month to go to the time you want to see.
-  Note that some timelines, such as [label]#Events Operations: All Events#, use minutes, hours, and days instead going back only 30 days. 
+  Note that some timelines, such as #Events Operations: All Events#, use minutes, hours, and days instead going back only 30 days. 
 . To see more detail for a resource in the timeline, click on it.
   A balloon appears with a clickable link to the resource. 
