--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_assign_chargeback_rates.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_assign_chargeback_rates.adoc
@@ -1,18 +1,18 @@
 [[_to_assign_chargeback_rates]]
 = Assigning Chargeback Rates
 
-CloudForms Management Engine allows you to assign chargeback rates by choosing from [label]#Compute# and [label]#Storage#. 
+CloudForms Management Engine allows you to assign chargeback rates by choosing from #Compute# and #Storage#. 
 
 .Procedure: To Assign Chargeback Rates
 . Navigate to menu:Cloud Intelligence[Chargeback]. 
-Click the [label]#Assignments# accordion, and click either [label]#Compute# or [label]#Storage#.
+Click the #Assignments# accordion, and click either #Compute# or #Storage#.
  
 
-* Use [label]#Compute# to assign a compute chargeback rate.
-  You can assign chargeback rates to [label]#The Enterprise#, [label]#Selected Clusters#, [label]#Selected Infrastructure Providers#, or [label]#Tagged VMs and Instances#. 
-* Use [label]#Storage# to assign a storage chargeback rate.
-. You can assign chargeback rates to [label]#The Enterprise#, [label]#Selected Datastores#, or [label]#Tagged Datastores#. 			
-. From the [label]#Basic Info# area, use the [label]#Assign To# list to select a type of assignee to assign the rate set to.
+* Use #Compute# to assign a compute chargeback rate.
+  You can assign chargeback rates to #The Enterprise#, #Selected Clusters#, #Selected Infrastructure Providers#, or #Tagged VMs and Instances#. 
+* Use #Storage# to assign a storage chargeback rate.
+. You can assign chargeback rates to #The Enterprise#, #Selected Datastores#, or #Tagged Datastores#. 			
+. From the #Basic Info# area, use the #Assign To# list to select a type of assignee to assign the rate set to.
   The options displayed vary based on the type you selected. 
 . For each item to set, select the chargeback rate to use. 
 . Click btn:[Save]. 
