--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_create_a_Menu_widget.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_create_a_Menu_widget.adoc
@@ -3,17 +3,17 @@
 
 .Procedure: To Create a Menu Widget
 . Navigate to menu:Cloud Intelligence[Reports]. 
-. Click the [label]#Dashboard Widget# accordion and click the [label]#Menus# folder. 
+. Click the #Dashboard Widget# accordion and click the #Menus# folder. 
 . Click  image:images/1847.png[] btn:[(Configuration)], then click  image:images/1848.png[] btn:[(Add a new Widget)]. 
-. In the [label]#Basic Information# area, type in a [label]#Title# and [label]#Description#.
+. In the #Basic Information# area, type in a #Title# and #Description#.
   By default the widget will be active as soon as you create it.
-  To make it inactive, uncheck the [label]#Active# box. 
+  To make it inactive, uncheck the #Active# box. 
 +
 
 image::images/2273.png[]
 
-. In the [label]#Menu Shortcut#s area, use the [label]#Add a Shortcut# dropdown to select all the places in the console that you want to add to this widget. 
-. In the [label]#Visibility# area, select [label]#<To All Users>#, so that all users can use this widget no matter what user role they are assigned.
-  Select [label]#<By Role># to assign this widget to specific user roles.
-  Select [label]#<By Group># to assign this widget to specific groups. 
+. In the #Menu Shortcut#s area, use the #Add a Shortcut# dropdown to select all the places in the console that you want to add to this widget. 
+. In the #Visibility# area, select #<To All Users>#, so that all users can use this widget no matter what user role they are assigned.
+  Select #<By Role># to assign this widget to specific user roles.
+  Select #<By Group># to assign this widget to specific groups. 
 . Click btn:[Add]. 
