--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_create_a_Real_Time_Performance_Alert.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_create_a_Real_Time_Performance_Alert.adoc
@@ -7,24 +7,24 @@ See the _General Configuration_ guide, available from https://access.redhat.com/
 
 .Procedure: To Create a Real Time Performance Alert
 . Navigate to menu:Control[Explorer]. 
-. Click the [label]#Alert# accordion, then click  image:images/1847.png[] ([label]#Configuration#),  image:images/1848.png[] ([label]#Add a new Alert#). 
-. In the [label]#Info# area: 
+. Click the #Alert# accordion, then click  image:images/1847.png[] (#Configuration#),  image:images/1848.png[] (#Add a new Alert#). 
+. In the #Info# area: 
 +
-* Type in a [label]#Description# for the alert. 
-* From [label]#Based On#, select [label]#VM and Instance#. 
-* For [label]#What to Evaluate#, select [label]#Real Time Performance#. 
-* In [label]#Notification Frequency#, select how often you want to be notified if the performance threshold is reached. 
+* Type in a #Description# for the alert. 
+* From #Based On#, select #VM and Instance#. 
+* For #What to Evaluate#, select #Real Time Performance#. 
+* In #Notification Frequency#, select how often you want to be notified if the performance threshold is reached. 
 
-. Set the threshold in the [label]#Real Time Performance Parameters# area. 
+. Set the threshold in the #Real Time Performance Parameters# area. 
 +
 
 image::images/1978.png[]
 +
-* From [label]#Performance Field#, select the field to check and any other parameters required for that field. 
-* In [label]#And is Trending#, select [label]#Don't Care# if it does not matter how the performance metric is trending.
+* From #Performance Field#, select the field to check and any other parameters required for that field. 
+* In #And is Trending#, select #Don't Care# if it does not matter how the performance metric is trending.
   Otherwise, choose from the possible trending options. 
-* In [label]#Field Meets Criteria for#, select the amount of time that the threshold requires to be met to trigger the alert. 
-* Set [label]#Debug Tracing# to true only when directed to do so by Red Hat Support.
+* In #Field Meets Criteria for#, select the amount of time that the threshold requires to be met to trigger the alert. 
+* Set #Debug Tracing# to true only when directed to do so by Red Hat Support.
   This provides an extremely detailed level of logging and can result in many more log lines being written. 
 
 . After setting the parameters, you then select what you want the alert to do.
