--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_create_a_Report_widget.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_create_a_Report_widget.adoc
@@ -3,35 +3,35 @@
 
 .Procedure: To Create a Report Widget
 . Navigate to menu:Cloud Intelligence[Reports]. 
-. Click on the [label]#Dashboard Widgets# accordion, then choose the [label]#Reports# folder. 
+. Click on the #Dashboard Widgets# accordion, then choose the #Reports# folder. 
 . Click  image:images/1847.png[] btn:[(Configuration)], then click  image:images/1848.png[] btn:[(Add a new Widget)]. 
 . Click menu:Configuration[Add a new Widget]. 
-. In the [label]#Basic Information# area, type in a [label]#Title# and [label]#Description#.
+. In the #Basic Information# area, type in a #Title# and #Description#.
   By default the widget will be active as soon as you create it.
-  To make it inactive, uncheck the [label]#Active# box. 
+  To make it inactive, uncheck the #Active# box. 
 +
 
 image::images/2265.png[]
 
-. From the [label]#Report Options# area, select the filters until you are at the report you want for this widget.
+. From the #Report Options# area, select the filters until you are at the report you want for this widget.
   Select up to four columns from that report.
-  Finally, for [label]#Row Count#, select the number of rows that you want displayed. 
+  Finally, for #Row Count#, select the number of rows that you want displayed. 
 +
 
 image::images/2266.png[]
 
-. In the [label]#Timer# area, click the [label]#Run# drop down to specify how often you want the widget data to get updated.
-  The options displayed will depend on which [label]#Run# option you choose.
-  Select [label]#Hourly#, [label]#Daily#, [label]#Weekly#, or [label]#Monthly#. 
+. In the #Timer# area, click the #Run# drop down to specify how often you want the widget data to get updated.
+  The options displayed will depend on which #Run# option you choose.
+  Select #Hourly#, #Daily#, #Weekly#, or #Monthly#. 
 +
 
 image::images/2267.png[]
 
-. Select a [label]#Time Zone#.
+. Select a #Time Zone#.
   Note that if you change the time zone, you will need to reset the starting date and time.
-  Type or select a date to begin the schedule in [label]#Starting Date#.
-  Select a [label]#Starting Time# based on a 24 hour clock in the selected time zone. 
-. In the [label]#Visibility# area, select [label]#<To All Users>#, so that all users can use this widget no matter what user role they are assigned.
-  Select [label]#<By Role># to assign this widget to specific user roles.
-  Select [label]#<By Group># to assign this widget to specific groups. 
+  Type or select a date to begin the schedule in #Starting Date#.
+  Select a #Starting Time# based on a 24 hour clock in the selected time zone. 
+. In the #Visibility# area, select #<To All Users>#, so that all users can use this widget no matter what user role they are assigned.
+  Select #<By Role># to assign this widget to specific user roles.
+  Select #<By Group># to assign this widget to specific groups. 
 . Click btn:[Add]. 
