--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_create_a_VMware_Alarm_Alert.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_create_a_VMware_Alarm_Alert.adoc
@@ -6,15 +6,15 @@ This type of alert can be created for a cluster, host, or virtual machine.
 
 .Procedure: To Create a VMware Alarm Alert
 . Navigate to menu:Control[Explorer]. 
-. Click the [label]#Alerts# accordion, then click  image:images/1847.png[] ([label]#Configuration#),  image:images/1848.png[] ([label]#Add a new Alert#). 
-. In the [label]#Info# area: 
+. Click the #Alerts# accordion, then click  image:images/1847.png[] (#Configuration#),  image:images/1848.png[] (#Add a new Alert#). 
+. In the #Info# area: 
 +
 * Type in a description for the alert. 
-* From [label]#Based On#, select [label]#Cluster#, [label]#Host#, or [label]#VM#. 
-* For [label]#What to Evaluate#, select [label]#VMware Alarm#. 
-* In [label]#Notification Frequency#, select how often you want to be notified if the log item is detected. 
+* From #Based On#, select #Cluster#, #Host#, or #VM#. 
+* For #What to Evaluate#, select #VMware Alarm#. 
+* In #Notification Frequency#, select how often you want to be notified if the log item is detected. 
 
-. In the [label]#VMware Alarm Parameters# area select the provider and alarm. 
+. In the #VMware Alarm Parameters# area select the provider and alarm. 
 +
 
 image::images/1984.png[]
