--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_create_a_chargeback_report.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_create_a_chargeback_report.adoc
@@ -5,34 +5,34 @@ CloudForms Management Engine allows you to create chargeback reports to monitor 
 
 .Procedure: To Create a Chargeback Report
 . Navigate to menu:Cloud Intelligence[Reports]. 
-. Click the [label]#Reports# accordion. 
+. Click the #Reports# accordion. 
 . Click  image:images/1847.png[]btn:[(Configuration)],  image:images/1848.png[] btn:[(Add a new Report)]. 
-. On the [label]#Columns# tab, fill out the [label]#Basic Report Info# area. 
+. On the #Columns# tab, fill out the #Basic Report Info# area. 
 +
-* Type a unique name in [label]#Menu Name# for how you want the report described in the menu list. 
-* Type the [label]#Title# to display on the report. 
+* Type a unique name in #Menu Name# for how you want the report described in the menu list. 
+* Type the #Title# to display on the report. 
 
-. Add fields in the [label]#Configure Report Columns# area. 
+. Add fields in the #Configure Report Columns# area. 
 +
-* From the [label]#Base the report on# list, select [label]#Chargebacks#. 
-* Select the fields to include in the report from the [label]#Available Fields# list, then click  image:images/2289.png[] btn:[(Move selected fields down)].
+* From the #Base the report on# list, select #Chargebacks#. 
+* Select the fields to include in the report from the #Available Fields# list, then click  image:images/2289.png[] btn:[(Move selected fields down)].
   In addition to the fields, you can also select any tags that you have created and assigned. 
 * Change the order of the fields in the report by clicking  image:images/2290.png[] btn:[(Move selected fields up)] or  image:images/2289.png[] btn:[(Move selected fields down)]. 
 
-. Click the [label]#Formatting# tab to set the size of paper for a PDF and column header format. 
+. Click the #Formatting# tab to set the size of paper for a PDF and column header format. 
 +
-* From the [label]#PDF Output# area, select the page size from the [label]#Page Size# list. 
-* From [label]#Specify Column Headers and Formats#, type the text to display for each field.
+* From the #PDF Output# area, select the page size from the #Page Size# list. 
+* From #Specify Column Headers and Formats#, type the text to display for each field.
   For each numeric field, you can also set the numeric format. 
 
-. Click the [label]#Filter# tab to set filters for the data displayed in the report. 
+. Click the #Filter# tab to set filters for the data displayed in the report. 
 +
-* From [label]#Chargeback Filters#, select how you want the costs to show, the tag category, the tag, and how you want the items grouped. 
-* From [label]#Chargeback Interval#, select the time interval.
-  You must have a full interval worth of data in order to select an option other than [label]#Partial# in the [label]#Daily Ending With# list. 
+* From #Chargeback Filters#, select how you want the costs to show, the tag category, the tag, and how you want the items grouped. 
+* From #Chargeback Interval#, select the time interval.
+  You must have a full interval worth of data in order to select an option other than #Partial# in the #Daily Ending With# list. 
 
-. Click the [label]#Preview# tab, and then Load to see what the report will look like. 
+. Click the #Preview# tab, and then Load to see what the report will look like. 
 . When you are satisfied that you have the report that you want, click btn:[Add] to create the new report. 
 
 The new report is created.
-To make the report accessible from the [label]#Report# menu, you must add it to a report menu.
+To make the report accessible from the #Report# menu, you must add it to a report menu.
