--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_create_an_Alert.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_create_an_Alert.adoc
@@ -9,28 +9,28 @@ For further information, see the _General Configuration_ guide, available from h
 
 .Procedure: To Create an Alert
 . Navigate to menu:Control[Explorer]. 
-. Click the [label]#Alerts# accordion, then click  image:images/1847.png[] ([label]#Configuration#),  image:images/1848.png[] ([label]#Add a new Alert#). 
+. Click the #Alerts# accordion, then click  image:images/1847.png[] (#Configuration#),  image:images/1848.png[] (#Add a new Alert#). 
 +
 * Type in a description for the alert. 
-* Check [label]#Active# when you feel that the alert is ready to be enabled. 
-* From [label]#Based On#, select the type of infrastructure item to base the alert on. 
-* The options shown in [label]#What to Evaluate# change based on what you selected in [label]#Based On#. 
-* In [label]#Notification Frequency#, select how often you want to be notified if the event log threshold is reached. 
+* Check #Active# when you feel that the alert is ready to be enabled. 
+* From #Based On#, select the type of infrastructure item to base the alert on. 
+* The options shown in #What to Evaluate# change based on what you selected in #Based On#. 
+* In #Notification Frequency#, select how often you want to be notified if the event log threshold is reached. 
 
-. The parameters available are based on the [label]#What to Evaluate# selection.
+. The parameters available are based on the #What to Evaluate# selection.
   See the following sections for additional details on each alert type. 
-. To send an email, check [label]#Send an E-mail#.
+. To send an email, check #Send an E-mail#.
   Parameters required for sending an email are displayed. 
 +
 
 image::images/1967.png[]
 +
-* In [label]#From#, type in the sending email. 
-* Use [label]#Add a CloudForms Management Engine User# to select a user.  The CloudForms Management Engine user must have a valid email address entered under accounts. 
-* Use [label]#Add (enter manually)# to type in the address not registered to a CloudForms Management Engine user.
-  Then, click  image:images/1848.png[] ([label]#Add#). 
+* In #From#, type in the sending email. 
+* Use #Add a CloudForms Management Engine User# to select a user.  The CloudForms Management Engine user must have a valid email address entered under accounts. 
+* Use #Add (enter manually)# to type in the address not registered to a CloudForms Management Engine user.
+  Then, click  image:images/1848.png[] (#Add#). 
 
-. If you check [label]#Send an SNMP Trap#, type in the IP for the host to send the trap to, select the version of SNMP that you are using, and type in the Trap Object ID.
+. If you check #Send an SNMP Trap#, type in the IP for the host to send the trap to, select the version of SNMP that you are using, and type in the Trap Object ID.
   Type in multiple hosts if you need the trap sent to multiple SNMP hosts. 
 +
 * If using SNMP V1, you will be prompted for a Trap Number.
@@ -110,10 +110,10 @@ image::images/1967.png[]
 image::images/1966.png[]
 
 
-. To show the alert as an event on the CloudForms Management Engine timeline, check [label]#Show on Timeline#.
+. To show the alert as an event on the CloudForms Management Engine timeline, check #Show on Timeline#.
   It shows as part of the Alarm/Status Change/Errors category. 
-. To invoke automation, check [label]#Send a Management Event#.
+. To invoke automation, check #Send a Management Event#.
   Type in the name of the event.
-  This item exists in the [label]#Process/Event Class#. 
+  This item exists in the #Process/Event Class#. 
 . Click btn:[Add].
 
