--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_create_an_Alert_Profile.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_create_an_Alert_Profile.adoc
@@ -6,11 +6,11 @@ An alert profile can have as many alerts assigned as you need, and can be assign
 
 .Procedure: To Create an Alert Profile
 . Navigate to menu:Control[Explorer]. 
-. Click on the [label]#Alert Profiles# accordion, then click on the type of profile that you want to create. 
-. Click  image:images/1847.png[] ([label]#Configuration#),  image:images/1848.png[] ([label]#Add a new Profile#). 
-. In the [label]#Basic Information# box, type in a unique [label]#Description# for the alert profile. 
-. Select the desired alerts from the [label]#Available Datastore Alerts# area.
+. Click on the #Alert Profiles# accordion, then click on the type of profile that you want to create. 
+. Click  image:images/1847.png[] (#Configuration#),  image:images/1848.png[] (#Add a new Profile#). 
+. In the #Basic Information# box, type in a unique #Description# for the alert profile. 
+. Select the desired alerts from the #Available Datastore Alerts# area.
   Use the kbd:[Ctrl] key to select multiple alerts. 
 . Click  image:images/1876.png[] to add the Alerts. 
-. Type in any additional description in the [label]#Notes# area. 
+. Type in any additional description in the #Notes# area. 
 . Click btn:[Add]. 
