--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_create_an_Hourly_Performance_Alert.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_create_an_Hourly_Performance_Alert.adoc
@@ -7,20 +7,20 @@ See the _General Configuration_ guide, available from https://access.redhat.com/
 
 .Procedure: To Create an Hourly Performance Alert
 . Navigate to menu:Control[Explorer]. 
-. Click the [label]#Alerts# accordion. 
-. Click  image:images/1847.png[] ([label]#Configuration#),  image:images/1848.png[] ([label]#Add a new Alert#). 
-. In the [label]#Info# area: 
+. Click the #Alerts# accordion. 
+. Click  image:images/1847.png[] (#Configuration#),  image:images/1848.png[] (#Add a new Alert#). 
+. In the #Info# area: 
 +
 
 image::images/1979.png[]
 +
-* Type in a [label]#Description# for the alert. 
-* From [label]#Based On#, select [label]#Cluster#. 
-* For [label]#What to Evaluate#, select [label]#Hourly Performance#. 
-* In [label]#Notification Frequency#, select how often you want to be notified if threshold is met. 
+* Type in a #Description# for the alert. 
+* From #Based On#, select #Cluster#. 
+* For #What to Evaluate#, select #Hourly Performance#. 
+* In #Notification Frequency#, select how often you want to be notified if threshold is met. 
 
-. In the [label]#Hourly Performance Parameters# area select performance field and the criteria.
-  You can also select options from the [label]#And is Trending# dropdown box and whether the [label]#Debug Tracing# is true or false. 
+. In the #Hourly Performance Parameters# area select performance field and the criteria.
+  You can also select options from the #And is Trending# dropdown box and whether the #Debug Tracing# is true or false. 
 . After setting the parameters, you then select what you want the alert to do.
   You can send an email, create an SNMP Trap, let the alert show on the timeline, or send a management event to start an automation process. 
 . Click btn:[Add]. 
