--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_create_an_Operational_Alert.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_create_an_Operational_Alert.adoc
@@ -3,14 +3,14 @@
 
 .Procedure: To Create an Operational Alert
 . Navigate to menu:Control[Explorer]. 
-. Click on the [label]#Alerts# accordion, then click  image:images/1847.png[] ([label]#Configuration#),  image:images/1848.png[] ([label]#Add a new Alert#). 
-. In the [label]#Info# area: 
+. Click on the #Alerts# accordion, then click  image:images/1847.png[] (#Configuration#),  image:images/1848.png[] (#Add a new Alert#). 
+. In the #Info# area: 
 +
 * Type in a description for the alert. 
-* Check [label]#Active# when you feel that the alert is ready to be enabled. 
-* From [label]#Based On#, select [label]#Server#. 
+* Check #Active# when you feel that the alert is ready to be enabled. 
+* From #Based On#, select #Server#. 
 * Select the appropriate driving event. 
-* In [label]#Notification Frequency#, select how often you want to be notified if the event log threshold is reached. 
+* In #Notification Frequency#, select how often you want to be notified if the event log threshold is reached. 
 
 . After setting the parameters, select what you want the alert to do.
   You can send an email, create an SNMP Trap, let the alert show on the timeline, or send a management event to start an automation process. 
