--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_create_chargeback_rates.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_create_chargeback_rates.adoc
@@ -5,11 +5,11 @@ CloudForms Management Engine allows you to create your own set of computing and 
 
 .Procedure: To Create Chargeback Rates
 . Navigate to menu:Cloud Intelligence[Chargeback]. 
-. Click the [label]#Rates# accordion and select either [label]#Compute# or [label]#Storage#. 
+. Click the #Rates# accordion and select either #Compute# or #Storage#. 
 
-* Use [label]#Compute# to set chargeback rates for CPU, disk I/O, memory, network I/O, and fixed items. 
-. * Use [label]#Storage# to set chargeback rates for fixed and storage items. 
+* Use #Compute# to set chargeback rates for CPU, disk I/O, memory, network I/O, and fixed items. 
+. * Use #Storage# to set chargeback rates for fixed and storage items. 
 . Click  image:images/1847.png[]btn:[(Configuration)],  image:images/1848.png[]btn:[(Add a new Chargeback Rate)] to create a new chargeback rate. 
-. Type in a [label]#Description# for the chargeback rate. 
+. Type in a #Description# for the chargeback rate. 
 . For each item that you want to set, type in a rate and select a time option. 
 . Click btn:[Add]. 
