--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_delete_a_widget.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_delete_a_widget.adoc
@@ -5,6 +5,6 @@ NOTE: Default widgets cannot be deleted, but they can be copied.
 
 .Procedure: To Delete a Widget
 . Navigate to menu:Cloud Intelligence[Reports]. 
-. Click the [label]#Dashboard Widget# accordion and select the widget you want to delete. 
+. Click the #Dashboard Widget# accordion and select the widget you want to delete. 
 . Click  image:images/1847.png[] btn:[(Configuration)], and then  image:images/1861.png[] btn:[(Delete this Widget from the Database)]. 
 . Click btn:[OK]. 
