--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_delete_an_Alert.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_delete_an_Alert.adoc
@@ -5,6 +5,6 @@ When an alert is no longer needed, you can remove it from your VMDB
 
 .Procedure: To Delete an Alert
 . Navigate to menu:Control[Explorer]. 
-. Click on the [label]#Alerts# accordion, then click on the alert that you want to delete. 
-. Click  image:images/1847.png[] ([label]#Configuration#),  image:images/1861.png[] ([label]#Delete this Alert#). 
+. Click on the #Alerts# accordion, then click on the alert that you want to delete. 
+. Click  image:images/1847.png[] (#Configuration#),  image:images/1861.png[] (#Delete this Alert#). 
 . Click btn:[OK] to confirm. 
