--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_delete_an_Alert_Profile.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_delete_an_Alert_Profile.adoc
@@ -6,6 +6,6 @@ This does not remove the alerts associated with the alert profile.
 
 .Procedure: To Delete an Alert Profile
 . Navigate to menu:Control[Explorer]. 
-. Click on the [label]#Alert Profiles# accordion, then click the alert profile you want to remove. 
-. Click  image:images/1847.png[] ([label]#Configuration#),  image:images/1861.png[] ([label]#Delete this Alert Profile#). 
+. Click on the #Alert Profiles# accordion, then click the alert profile you want to remove. 
+. Click  image:images/1847.png[] (#Configuration#),  image:images/1861.png[] (#Delete this Alert Profile#). 
 . Click btn:[OK] to confirm. 
