--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_edit_a_widget.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_edit_a_widget.adoc
@@ -5,7 +5,7 @@
 
 .Procedure: To Edit a Widget
 . Navigate to menu:Cloud Intelligence[Reports]. 
-. Click the [label]#Dashboard Widgets# accordion and select the widget you want to edit. 
+. Click the #Dashboard Widgets# accordion and select the widget you want to edit. 
 . Click  image:images/1847.png[] btn:[(Configuration)], and then  image:images/1851.png[] btn:[(Edit this Widget)]. 
 . Make the required changes. 
 . Click btn:[Save]. 
