--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_edit_an_Alert.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_edit_an_Alert.adoc
@@ -5,7 +5,7 @@ After creating an alert, you can edit the threshold, expression, or the notifica
 
 .Procedure: To Edit an Alert
 . Navigate to menu:Control[Explorer] 
-. Click on the [label]#Alerts# accordion, then click on the alert that you need to edit. 
-. Click  image:images/1847.png[] [label]#(Configuration)#,  image:images/1851.png[] [label]#(Edit this Alert)#. 
+. Click on the #Alerts# accordion, then click on the alert that you need to edit. 
+. Click  image:images/1847.png[] #(Configuration)#,  image:images/1851.png[] #(Edit this Alert)#. 
 . Make the required changes. 
 . Click btn:[Save]. 
