--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_edit_an_Alert_Profile.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_edit_an_Alert_Profile.adoc
@@ -5,7 +5,7 @@ You can edit an alert profile as your enterprise's need change.
 
 .Procedure: To Edit an Alert Profile
 . Navigate to menu:Control[Explorer]. 
-. Click on the [label]#Alert Profiles# accordion, then click the alert profile you want to edit. 
-. Click  image:images/1847.png[] ([label]#Configuration#),  image:images/1851.png[] ([label]#Edit this Alert Profile#). 
+. Click on the #Alert Profiles# accordion, then click the alert profile you want to edit. 
+. Click  image:images/1847.png[] (#Configuration#),  image:images/1851.png[] (#Edit this Alert Profile#). 
 . Make the required changes. 
 . Click btn:[Save]. 
