--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_generate_widget_content_immediately.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_generate_widget_content_immediately.adoc
@@ -3,9 +3,9 @@
 
 .Procedure: To Generate Widget Content Immediately
 . Navigate to menu:Cloud Intelligence[Reports]. 
-. Click the [label]#Dashboard Widgets# accordion and select the widget you want to generate. 
+. Click the #Dashboard Widgets# accordion and select the widget you want to generate. 
 . Click  image:images/1847.png[] btn:[(Configuration)], and then  image:images/1847.png[] btn:[(Generate Widget Content now)]. 
 . Click btn:[OK]. 
 
 The content is generated immediately instead of waiting for the next scheduled update.
-Generation of widget content is shown under the [label]#Tasks# page of  image:images/1846.png[] btn:[(Settings & Operations)]. 
+Generation of widget content is shown under the #Tasks# page of  image:images/1846.png[] btn:[(Settings & Operations)]. 
