--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_manage_Report_Menu_Accordions.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_manage_Report_Menu_Accordions.adoc
@@ -5,9 +5,9 @@
 
 .Procedure: To Manage Report Menu Accordions
 . Navigate to menu:Cloud Intelligence[Reports]. 
-. Click the [label]#Edit Report Menus# accordion. 
+. Click the #Edit Report Menus# accordion. 
 . Click the role whose menus you want to customize. 
-. Click on [label]#Top Level# to organize, add, and delete accordions. 
+. Click on #Top Level# to organize, add, and delete accordions. 
 +
 * Click  image:images/2305.png[] btn:[(Move selected Accordion to top)] to move the accordion to the top of the list. 
 * Click  image:images/2290.png[] btn:[(Move selected Accordion up)] to move the accordion up. 
@@ -15,10 +15,10 @@
 * Click  image:images/2306.png[] btn:[(Move selected Accordion to bottom)] to move the accordion to the bottom of the list. 
 * Click  image:images/1861.png[] btn:[(Delete selected Accordion and its contents)] to delete an accordion. 
 * Click  image:images/1848.png[] btn:[(Add folder to selected Accordion)] to add an accordion.
-  Note that if you are creating a new accordion, [label]#Top Level# must have been selected under [label]#Reports#.
+  Note that if you are creating a new accordion, #Top Level# must have been selected under #Reports#.
   Be sure to select the folder you want to create a subfolder for on the left pane.
   To name the accordion, double-click on [path]_New Folder_.
-  Click on [label]#Top Level# in the [label]#Reports# area. 
+  Click on #Top Level# in the #Reports# area. 
 
 . When you are finished adding accordions, click  image:images/1863.png[] btn:[(Commit folder management changes)].
   To revert, click  image:images/1904.png[] btn:[(Discard folder management changes)]. 
