--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_modify_a_report_schedule.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_modify_a_report_schedule.adoc
@@ -3,7 +3,7 @@
 
 .Procedure: To Modify a Report Schedule
 . Navigate to menu:Cloud Intelligence[Reports] 
-. Click the [label]#Schedules# accordion and select the schedule you want to edit. 
-. Click  image:images/1847.png[] ([label]#Configuration#), then click  image:images/1851.png[] ([label]#Edit this Schedule#). 
+. Click the #Schedules# accordion and select the schedule you want to edit. 
+. Click  image:images/1847.png[] (#Configuration#), then click  image:images/1851.png[] (#Edit this Schedule#). 
 . Make the required changes. 
 . Click btn:[Save]. 
