--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_organize_reports_in_Report_Menus.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_organize_reports_in_Report_Menus.adoc
@@ -4,13 +4,13 @@
 .Procedure: To Organize Reports in Report Menus
 . Log in to the console as a user who is assigned either the Super Administrator or Administrator Account Role. 
 . Navigate to menu:Cloud Intelligence[Reports]. 
-. Click the [label]#Edit Report Menus# accordion. 
+. Click the #Edit Report Menus# accordion. 
 . Click the role whose menus you want to customize. 
-. Expand the [label]#Report# accordion and menus using the triangles to the left of the item name until you are able to select the subfolder where you want to put reports. 
+. Expand the #Report# accordion and menus using the triangles to the left of the item name until you are able to select the subfolder where you want to put reports. 
 . Choose one of the following actions. 
 +
-* To add a report, select a report from the [label]#Available Reports# area on the right and click  image:images/1876.png[] btn:[(Move selected reports left)]. 
-* To remove a report from a folder, select the report from the [label]#Selected Reports# area and click  image:images/1878.png[] btn:[(Move selected reports right)]. 
+* To add a report, select a report from the #Available Reports# area on the right and click  image:images/1876.png[] btn:[(Move selected reports left)]. 
+* To remove a report from a folder, select the report from the #Selected Reports# area and click  image:images/1878.png[] btn:[(Move selected reports right)]. 
 * To move a report to the top of the folder, select the report and click  image:images/2305.png[] btn:[(Move selected reports to top)]. 
 * To move a report up one place in the folder, select the report and click  image:images/2290.png[]btn:[(Move selected reports up)]. 
 * To move a report down one place in the folder, select the report and click  image:images/2289.png[] btn:[(Move selected reports down)]. 
