Removed labels from the Managing Providers guide.

--- a/doc-Managing_Providers/Cloud_Providers.adoc
+++ b/doc-Managing_Providers/Cloud_Providers.adoc
@@ -2,7 +2,7 @@
 = Cloud Providers
 
 A cloud provider is a service that manages cloud resources.
-The [label]#Providers# page displays all discovered or added cloud providers. 
+The #Providers# page displays all discovered or added cloud providers. 
 
 :leveloffset: 2
 include::topics/Adding_OpenStack_Providers.adoc[]
