--- a/doc-Managing_Providers/topics/Adding_OpenStack_Providers.adoc
+++ b/doc-Managing_Providers/topics/Adding_OpenStack_Providers.adoc
@@ -6,34 +6,34 @@ When using the admin credentials, a user in CloudForms Management Engine provisi
 
 . Navigate to menu:Clouds[Providers]. 
 . Click  image:images/1847.png[] btn:[(Configuration)], then click  image:images/1848.png[] btn:[(Add a New Cloud Provider)]. 
-. Enter a [label]#Name# for the provider. 
-. From the [label]#Type# drop down menu select [label]#OpenStack#. 
-. Enter the [label]#Host Name (or IPv4 or IPv6 address)# of the provider. 
+. Enter a #Name# for the provider. 
+. From the #Type# drop down menu select #OpenStack#. 
+. Enter the #Host Name (or IPv4 or IPv6 address)# of the provider. 
 +
-IMPORTANT: The [label]#Host Name# must use a unique fully qualified domain name. 
+IMPORTANT: The #Host Name# must use a unique fully qualified domain name. 
 
-. Enter the [label]#API Port# of your Keystone service. 
+. Enter the #API Port# of your Keystone service. 
   The default port is [literal]+5000+. 
 +
 IMPORTANT: If the Keystone service is configured to use SSL, you must enter the SSL port for Keystone. 
 
-. Select the appropriate [label]#API Version# from the list. The default is [literal]+Keystone v2+. 
-. Select the appropriate [label]#Zone# for the provider.
-  By default, the zone is set to [label]#default#. 
-. In the [label]#Credentials# area, under [label]#Default#, provide the login credentials required for the Keystone user: 
+. Select the appropriate #API Version# from the list. The default is [literal]+Keystone v2+. 
+. Select the appropriate #Zone# for the provider.
+  By default, the zone is set to #default#. 
+. In the #Credentials# area, under #Default#, provide the login credentials required for the Keystone user: 
 +
 IMPORTANT: To enable discovery of OpenStack cloud providers, ensure that the [path]_iptables_ for the OpenStack host providing Keystone services allows port 5000 access to all hosts on the same network. 
 +
-* Enter the user name in the [label]#Username# field. 
-* Enter the user password in the [label]#Password# field. 
-* Confirm the user password in the [label]#Confirm Password# field. 
+* Enter the user name in the #Username# field. 
+* Enter the user password in the #Password# field. 
+* Confirm the user password in the #Confirm Password# field. 
 * Click btn:[Validate] to confirm CFME can connect to the OpenStack Infrastructure instance. 
 
-. If AMQP credentials were changed during the OpenStack provider install, use the [label]#AMQP# tab of the [label]#Credentials# area to provide the login credentials required for the Advanced Message Queuing Protocol messaging service on your OpenStack Nova component: 
+. If AMQP credentials were changed during the OpenStack provider install, use the #AMQP# tab of the #Credentials# area to provide the login credentials required for the Advanced Message Queuing Protocol messaging service on your OpenStack Nova component: 
 +
-* Enter the administrative user name in the [label]#Username# field. 
-* Enter the user password in the [label]#Password# field. 
-* Confirm the user password in the [label]#Confirm Password# field. 
+* Enter the administrative user name in the #Username# field. 
+* Enter the user password in the #Password# field. 
+* Confirm the user password in the #Confirm Password# field. 
 * Click btn:[Validate] to confirm CFME can connect to the messaging service. 
 
 . Click btn:[Add]. 
@@ -46,7 +46,7 @@ Hence, the OpenStack adminURL endpoint should be assigned an IP address other th
 
 [NOTE]
 ======
-For Red Hat CloudForms to be able to receive events from a Red Hat OpenStack provider, the OpenStack configuration file must be modified. Specifically, the [label]#notification_driver# field must be defined.
+For Red Hat CloudForms to be able to receive events from a Red Hat OpenStack provider, the OpenStack configuration file must be modified. Specifically, the #notification_driver# field must be defined.
 
 For Nova and Heat, in order to start getting notifications, manually change the configuration files as below and restart services.
 
