--- a/doc-Managing_Providers/topics/Discovering_Multiple_Management_Systems.adoc
+++ b/doc-Managing_Providers/topics/Discovering_Multiple_Management_Systems.adoc
@@ -15,7 +15,7 @@ image::images/discover-providers.png[]
 * To authenticate to Red Hat Enterprise Virtualization hosts see <<_authenticating_red_hat_enterprise_virtualization_hosts,Authenticating Red Hat Enterprise Virtualization Hosts>>. 
 * To authenticate to VMware vCenter hosts see <<_authenticating_vmware_vcenter_hosts,Authenticating VMware vCenter Hosts>>. 
 
-. Enter a [label]#Subnet Range# of IP addresses starting with a [label]#From Address# and ending with a [label]#To Address#.
+. Enter a #Subnet Range# of IP addresses starting with a #From Address# and ending with a #To Address#.
   The cursor automatically advances as you complete each octet. 
 +
 
