--- a/doc-Managing_Providers/topics/Editing_a_Cloud_Provider.adoc
+++ b/doc-Managing_Providers/topics/Editing_a_Cloud_Provider.adoc
@@ -2,21 +2,21 @@
 
 Edit information about a provider such as the name, IP address, and login credentials. 
 
-NOTE: The [label]#Type# value is unchangeable.
+NOTE: The #Type# value is unchangeable.
 To use a different cloud provider, create a new one. 
 
 . Navigate to menu:Clouds[Providers]. 
 . Click the cloud provider to edit. 
 . Click  image:images/1847.png[] btn:[(Configuration)], and then  image:images/1851.png[]btn:[(Edit Selected Cloud Provider)]. 
-. Edit the [label]#Basic Information#.
-  This varies depending on the [label]#Type# of provider. 
-. Fill out the [label]#Credentials# by typing in a [label]#Username#, [label]#Password#, and a verification of this password ([label]#Confirm Password#). 
+. Edit the #Basic Information#.
+  This varies depending on the #Type# of provider. 
+. Fill out the #Credentials# by typing in a #Username#, #Password#, and a verification of this password (#Confirm Password#). 
 +
-* If selecting [label]#Amazon EC2#, generate an [label]#Access Key# in the [label]#Security Credentials# of your Amazon AWS account.
-  The [label]#Access Key ID# acts as your [label]#User ID#, and your [label]#Secret Access Key# acts as your [label]#Password#. 
-* If selecting [label]#OpenStack#, use the Keystone User ID and Password for your login credentials. 
+* If selecting #Amazon EC2#, generate an #Access Key# in the #Security Credentials# of your Amazon AWS account.
+  The #Access Key ID# acts as your #User ID#, and your #Secret Access Key# acts as your #Password#. 
+* If selecting #OpenStack#, use the Keystone User ID and Password for your login credentials. 
 
-. If editing an OpenStack provider, use the [label]#AMQP# subtab to provide credentials required for the Advanced Message Queuing Protocol service on your OpenStack Nova component. 
+. If editing an OpenStack provider, use the #AMQP# subtab to provide credentials required for the Advanced Message Queuing Protocol service on your OpenStack Nova component. 
 . Click btn:[Validate] and wait for notification of successful validation. 
 . Click btn:[Save].
 
