--- a/doc-Managing_Providers/topics/Refreshing_Multiple_Management_Systems.adoc
+++ b/doc-Managing_Providers/topics/Refreshing_Multiple_Management_Systems.adoc
@@ -2,9 +2,9 @@
 = Refreshing Providers
 
 Refresh a provider to find other resources related to it.
-Use [label]#Refresh# after initial discovery to get the latest data about the provider and the virtual machines it can access.
+Use #Refresh# after initial discovery to get the latest data about the provider and the virtual machines it can access.
 Ensure the provider has credentials to do this.
-If the providers were added using [label]#Discovery#, add credentials using  image:images/1851.png[] btn:[(Edit Selected Infrastructure Provider)]. 
+If the providers were added using #Discovery#, add credentials using  image:images/1851.png[] btn:[(Edit Selected Infrastructure Provider)]. 
 
 . Navigate to menu:Infrastructure[Providers]. 
 . Select the providers to refresh. 
