--- a/doc-Managing_Providers/topics/Viewing_Capacity_and_Utilization_Charts_for_a_Datastore.adoc
+++ b/doc-Managing_Providers/topics/Viewing_Capacity_and_Utilization_Charts_for_a_Datastore.adoc
@@ -4,13 +4,13 @@ You can view capacity and utilization data for a datastore.
 
 [NOTE]
 ======
-CloudForms Management Engine requires network visibility to your provider assigned the server role of [label]#Capacity & Utilization Collector# to enable this feature. 
+CloudForms Management Engine requires network visibility to your provider assigned the server role of #Capacity & Utilization Collector# to enable this feature. 
 ======
 
 . Navigate to menu:Infrastructure[Datastores], then click the Datastore that you want to view Capacity and Utilization data for. 
 . Click  image:images/1994.png[] btn:[(Monitoring)], and then  image:images/1994.png[] (btn:[Utilization]) or from the Datastore Accordion, click menu:Properties[Capacity & Utilization]. 
-. From [label]#Interval#, select to view hourly or daily data points and the dates to view data.
-  Use [label]#VM Types to Include# to include only managed/registered, managed/unregistered, or unmanaged virtual machines.
+. From #Interval#, select to view hourly or daily data points and the dates to view data.
+  Use #VM Types to Include# to include only managed/registered, managed/unregistered, or unmanaged virtual machines.
   The following definitions will be helpful. 
 +
 * _Managed/Registered VM_ - A virtual machine connected to a host and exists in the VMDB.
@@ -24,7 +24,7 @@ NOTE: Templates cannot be connected to a Host.
   These files might be registered to a management system that CloudForms Management Engine does not have configuration information.
   Possible causes might be the management system has not been discovered or the management system has been discovered but no security credentials are provided. 
 +
-Use [label]#Time Profiles# to select a time range for the data. 
+Use #Time Profiles# to select a time range for the data. 
 
 NOTE: Daily charts only include full days of data.
 If a day does not include all the 24 data points for a day, the data does not show for that day.
