--- a/doc-Managing_Providers/topics/Viewing_Virtual_Machines_and_Templates.adoc
+++ b/doc-Managing_Providers/topics/Viewing_Virtual_Machines_and_Templates.adoc
@@ -1,8 +1,8 @@
 = Viewing Virtual Machines and Templates
 
-Access a tree view of the virtual machines and templates for a provider from the [label]#Provider Summary#. 
+Access a tree view of the virtual machines and templates for a provider from the #Provider Summary#. 
 
 . Navigate to menu:Infrastructure[Providers]. 
 . Click the provider to view the virtual machines and templates. 
-. From accordion menu, click [label]#Relationships#, then click [label]#VMs & Templates#.
+. From accordion menu, click #Relationships#, then click #VMs & Templates#.
 
