--- a/doc-Managing_Providers/topics/Adding_Amazon_EC2_Providers.adoc
+++ b/doc-Managing_Providers/topics/Adding_Amazon_EC2_Providers.adoc
@@ -5,11 +5,11 @@ After initial installation and creation of a CloudForms Management Engine enviro
 .Procedure: To Add Amazon EC2 Provider
 . Navigate to menu:Clouds[Providers]. 
 . Click  image:images/1847.png[] btn:[(Configuration)], then click  image:images/1848.png[] btn:[(Add a New Cloud Provider)]. 
-. Enter a [label]#Name# for the provider. 
-. From the [label]#Type# list select [label]#Amazon EC2#. 
-. Select an [label]#Amazon Region#. 
-. Select the appropriate [label]#Zone# if you have more than one available. 
-. Generate an [label]#Access Key# in the [label]#Security Credentials# of your Amazon AWS account.
-  The [label]#Access Key ID# acts as your [label]#User ID#, and your [label]#Secret Access Key# acts as your [label]#Password#. 
+. Enter a #Name# for the provider. 
+. From the #Type# list select #Amazon EC2#. 
+. Select an #Amazon Region#. 
+. Select the appropriate #Zone# if you have more than one available. 
+. Generate an #Access Key# in the #Security Credentials# of your Amazon AWS account.
+  The #Access Key ID# acts as your #User ID#, and your #Secret Access Key# acts as your #Password#. 
 . Click btn:[Validate] to validate the credentials. 
 . Click btn:[Add]. 
