--- a/doc-Managing_Providers/topics/Adding_Azure_Providers.adoc
+++ b/doc-Managing_Providers/topics/Adding_Azure_Providers.adoc
@@ -16,11 +16,11 @@ After a service principal account has been created in Azure, the following three
 .Procedure: To Add an Azure Provider
 . Navigate to menu:Clouds[Providers].
 . Click image:images/1847.png[] btn:[(Configuration)], then click image:images/1848.png[] btn:[(Add a New Cloud Provider)].
-. Enter a [label]#Name# for the provider.
-. From the [label]#Type# list, select [label]#Azure#.
-. Select a region from the [label]#Region# list.
-. Enter [label]#Tenant ID#.
-. Enter [label]#Zone#.
+. Enter a #Name# for the provider.
+. From the #Type# list, select #Azure#.
+. Select a region from the #Region# list.
+. Enter #Tenant ID#.
+. Enter #Zone#.
 . In the Credentials section, enter the Client ID and Client Key; click btn:[Validate].
 . Click btn:[Add].
 
