--- a/doc-Managing_Providers/topics/Adding_a_Red_Hat_Enterprise_Virtualization_Manager_Provider.adoc
+++ b/doc-Managing_Providers/topics/Adding_a_Red_Hat_Enterprise_Virtualization_Manager_Provider.adoc
@@ -4,24 +4,24 @@ After initial installation and creation of a CloudForms Management Engine enviro
 
 . Navigate to menu:Infrastructure[Providers]. 
 . Click  image:images/1847.png[] btn:[(Configuration)], then click  image:images/1848.png[]btn:[(Add a New Infrastructure Provider)]. 
-. Enter the [label]#Name# of the provider to add.
-  The [label]#Name# is how the device is labeled in the console. 
-. Select [label]#Red Hat Enterprise Virtualization Manager# from the [label]#Type# list. 
-. Enter the [label]#Host Name or IP address(IPv4 or IPv6)# of the provider. 
+. Enter the #Name# of the provider to add.
+  The #Name# is how the device is labeled in the console. 
+. Select #Red Hat Enterprise Virtualization Manager# from the #Type# list. 
+. Enter the #Host Name or IP address(IPv4 or IPv6)# of the provider. 
 +
-IMPORTANT: The [label]#Host Name# must use a unique fully qualified domain name. 
+IMPORTANT: The #Host Name# must use a unique fully qualified domain name. 
 
-. Enter the [label]#API Port# if your provider uses a non-standard port for access. 
-. Select the appropriate [label]#Zone# for the provider.
-  By default, the zone is set to [label]#default#. 
-. In the [label]#Credentials# area, under [label]#Default#, provide the login credentials required for the Red Hat Enterprise Virtualization Manager administrative user: 
+. Enter the #API Port# if your provider uses a non-standard port for access. 
+. Select the appropriate #Zone# for the provider.
+  By default, the zone is set to #default#. 
+. In the #Credentials# area, under #Default#, provide the login credentials required for the Red Hat Enterprise Virtualization Manager administrative user: 
 +
-* Enter the user name, [userinput]#admin@internal#, in the [label]#Username# field. 
-* Enter the password in the [label]#Password# field. 
-* Confirm the password in the [label]#Confirm Password# field. 
+* Enter the user name, [userinput]#admin@internal#, in the #Username# field. 
+* Enter the password in the #Password# field. 
+* Confirm the password in the #Confirm Password# field. 
 * Click btn:[Validate] to confirm CFME can connect to the Red Hat Enterprise Virtualization Manager. 
 
-. Under [label]#C & U Database# tab, provide the login credentials for the CloudForms user of the Red Hat Enterprise Virtualization Data Warehouse database: 
+. Under #C & U Database# tab, provide the login credentials for the CloudForms user of the Red Hat Enterprise Virtualization Data Warehouse database: 
 +
 [NOTE]
 ====
@@ -31,9 +31,9 @@ To create the user, see section "Data Collection for Red Hat Enterprise Virtuali
 For information on setting up the Data Warehouse service on the Manager, see the Red Hat Enterprise Virtualization Installation Guide. 
 ====
 +
-* Enter the database user name in the [label]#Username# field. 
-* Enter the user password in the [label]#Password# field. 
-* Confirm the user password in the [label]#Confirm Password# field. 
+* Enter the database user name in the #Username# field. 
+* Enter the user password in the #Password# field. 
+* Confirm the user password in the #Confirm Password# field. 
 * Click btn:[Validate] to confirm CFME can connect to the database. 
 
 . Click btn:[Save].
