--- a/doc-Managing_Providers/topics/Adding_a_VMware_vCenter_Provider.adoc
+++ b/doc-Managing_Providers/topics/Adding_a_VMware_vCenter_Provider.adoc
@@ -4,20 +4,20 @@ After initial installation and creation of a CloudForms Management Engine enviro
 
 . Navigate to menu:Infrastructure[Providers]. 
 . Click  image:images/1847.png[] btn:[(Configuration)], then click  image:images/1848.png[]btn:[(Add a New Infrastructure Provider)]. 
-. Enter the [label]#Name# of the provider to add.
-  The [label]#Name# is how the device is labeled in the console. 
-. Select [label]#VMware vCenter# from the [label]#Type# list. 
-. Enter the [label]#Host Name or IP address(IPv4 or IPv6)# of the provider. 
+. Enter the #Name# of the provider to add.
+  The #Name# is how the device is labeled in the console. 
+. Select #VMware vCenter# from the #Type# list. 
+. Enter the #Host Name or IP address(IPv4 or IPv6)# of the provider. 
 +
-IMPORTANT: The [label]#Host Name# must use a unique fully qualified domain name. 
+IMPORTANT: The #Host Name# must use a unique fully qualified domain name. 
 
-. Select the appropriate [label]#Zone# for the provider.
-  By default, the zone is set to [label]#default#. 
-. In the [label]#Credentials# area, under [label]#Default#, provide the login credentials required for the VMware vCenter administrative user: 
+. Select the appropriate #Zone# for the provider.
+  By default, the zone is set to #default#. 
+. In the #Credentials# area, under #Default#, provide the login credentials required for the VMware vCenter administrative user: 
 +
-* Enter the user name in the [label]#Username# field. 
-* Enter the password in the [label]#Password# field. 
-* Confirm the password in the [label]#Confirm Password# field. 
+* Enter the user name in the #Username# field. 
+* Enter the password in the #Password# field. 
+* Confirm the password in the #Confirm Password# field. 
 * Click btn:[Validate] to confirm CFME can connect to the VMware vCenter. 
 
 . Click btn:[Add]. 
