--- a/doc-Managing_Providers/topics/Adding_an_Atomic_Enterprise_Provider.adoc
+++ b/doc-Managing_Providers/topics/Adding_an_Atomic_Enterprise_Provider.adoc
@@ -7,15 +7,15 @@ For information on how to configure an Atomic Enterprise Platform cluster servic
 .Procedure: To Add an Atomic Enterprise Platform Provider
 . Navigate to menu:Containers[Providers]. 
 . Click  image:images/1847.png[] btn:[Configuration], then click  image:images/1848.png[] btn:[Add a New Containers Provider]. 
-. Enter a [label]#Name# for the provider. 
-. From the [label]#Type# drop-down menu select [label]#Atomic Enterprise#. 
-. Enter the [label]#Hostname or IP address# of the provider. 
+. Enter a #Name# for the provider. 
+. From the #Type# drop-down menu select #Atomic Enterprise#. 
+. Enter the #Hostname or IP address# of the provider. 
 +
-IMPORTANT: The [label]#Hostname# must use a unique fully qualified domain name. 
+IMPORTANT: The #Hostname# must use a unique fully qualified domain name. 
 +
-. Enter the [label]#Port# of the provider.
+. Enter the #Port# of the provider.
   The default port is [literal]+8443+. 
-. Under #Credentials#, enter the token in the [label]#Token# field. 
+. Under #Credentials#, enter the token in the #Token# field. 
 * Click btn:[Validate] to confirm that the CloudForms Management Engine can connect to the Atomic Enterprise provider using the provided token. 
 . Click btn:[Add].
 
