--- a/doc-Managing_Providers/topics/Adding_an_OpenStack_Infrastructure_Provider.adoc
+++ b/doc-Managing_Providers/topics/Adding_an_OpenStack_Infrastructure_Provider.adoc
@@ -6,38 +6,38 @@ When using the admin credentials, a user in CloudForms Management Engine provisi
 
 . Navigate to menu:Infrastructure[Providers]. 
 . Click  image:images/1847.png[] btn:[(Configuration)], then click  image:images/1848.png[]btn:[(Add a New Infrastructure Provider)]. 
-. Enter the [label]#Name# of the provider to add.
-  The [label]#Name# is how the device is labeled in the console. 
-. Select [label]#OpenStack Platform Director# from the [label]#Type# list. 
-. Enter the [label]#Host Name or IP address(IPv4 or IPv6)# of the provider. 
+. Enter the #Name# of the provider to add.
+  The #Name# is how the device is labeled in the console. 
+. Select #OpenStack Platform Director# from the #Type# list. 
+. Enter the #Host Name or IP address(IPv4 or IPv6)# of the provider. 
 +
-IMPORTANT: The [label]#Host Name# must use a unique fully qualified domain name. 
+IMPORTANT: The #Host Name# must use a unique fully qualified domain name. 
 
-. Select the [label]#API Version# of your Keystone service from the list. The default is [literal]+Keystone v2+.
+. Select the #API Version# of your Keystone service from the list. The default is [literal]+Keystone v2+.
    
 +
 IMPORTANT: If the Keystone service is configured to use SSL, you must enter the SSL port for Keystone. 
 
-. Select the appropriate [label]#Zone# for the provider.
-  By default, the zone is set to [label]#default#. 
-. In the [label]#Credentials# area, under [label]#Default#, provide the login credentials required for the OpenStack Infrastructure administrative user: 
+. Select the appropriate #Zone# for the provider.
+  By default, the zone is set to #default#. 
+. In the #Credentials# area, under #Default#, provide the login credentials required for the OpenStack Infrastructure administrative user: 
 +
-* Enter the user name in the [label]#Username# field. 
-* Enter the password in the [label]#Password# field. 
-* Confirm the user password in the [label]#Confirm Password# field. 
+* Enter the user name in the #Username# field. 
+* Enter the password in the #Password# field. 
+* Confirm the user password in the #Confirm Password# field. 
 * Click btn:[Validate] to confirm that the CloudForms Management Engine can connect to the OpenStack Infrastructure instance using the user name and password. 
 
-. Under [label]#AMQP#, provide the login credentials required for the Advanced Message Queuing Protocol messaging service: 
+. Under #AMQP#, provide the login credentials required for the Advanced Message Queuing Protocol messaging service: 
 +
-* Enter the administrative user name in the [label]#Username# field. 
-* Enter the user password in the [label]#Password# field. 
-* Confirm the user password in the [label]#Confirm Password# field. 
+* Enter the administrative user name in the #Username# field. 
+* Enter the user password in the #Password# field. 
+* Confirm the user password in the #Confirm Password# field. 
 * Click btn:[Validate] to confirm CFME can connect to the messaging service. 
 
-. Under [label]#RSA key pair#, provide the user name and private key required to connect via SSH to all hosts in the provider: 
+. Under #RSA key pair#, provide the user name and private key required to connect via SSH to all hosts in the provider: 
 +
-* Enter the administrative user name in the [label]#Username# field. 
-* Enter the private key from the machine on which OpenStack was deployed in the [label]#Private Key# field. 
+* Enter the administrative user name in the #Username# field. 
+* Enter the private key from the machine on which OpenStack was deployed in the #Private Key# field. 
 
 . Click btn:[Add]. 
 
@@ -47,7 +47,7 @@ The adminURL endpoint must be accessible to the CFME Appliance that is responsib
 
 [NOTE]
 ======
-For Red Hat CloudForms to be able to receive events from a Red Hat OpenStack provider, the OpenStack configuration file must be modified. Specifically, the [label]#notification_driver# field must be defined.
+For Red Hat CloudForms to be able to receive events from a Red Hat OpenStack provider, the OpenStack configuration file must be modified. Specifically, the #notification_driver# field must be defined.
 
 For Nova and Heat, in order to start getting notifications, manually change the configuration files as below and restart services.
 
