--- a/doc-Managing_Providers/topics/Authenticating_VMware_vCenter_Hosts.adoc
+++ b/doc-Managing_Providers/topics/Authenticating_VMware_vCenter_Hosts.adoc
@@ -4,18 +4,18 @@ The procedure below describes how to authenticate the VMware vCenter hosts.
 
 . Navigate to menu:Infrastructure[Providers]. 
 . Click on a provider to display its summary screen. 
-. On the summary screen, click [label]#Hosts# in the [label]#Relationships# information box to display the hosts on that provider. 
+. On the summary screen, click #Hosts# in the #Relationships# information box to display the hosts on that provider. 
 . Select the hosts to authenticate.
-  You can select all hosts using the [label]#Check All# option. 
+  You can select all hosts using the #Check All# option. 
 . Click  image:images/1847.png[] btn:[(Configuration)]			
 . Click  image:images/1851.png[] btn:[(Edit Selected items)].
-. In the [label]#Credentials# area, under [label]#Default#, provide the VMware ESXi login credentials:
+. In the #Credentials# area, under #Default#, provide the VMware ESXi login credentials:
 +
-* Enter the user name in the [label]#Username# field. 
-* Enter the password in the [label]#Password# field. 
-* Confirm the password in the [label]#Confirm Password# field. 
+* Enter the user name in the #Username# field. 
+* Enter the password in the #Password# field. 
+* Confirm the password in the #Confirm Password# field. 
 * Click btn:[Validate] to confirm CFME can connect to the VMware vCenter host. 
-. If editing multiple hosts, select a host from the [label]#Select Host to validate against# list; provide the VMware ESXi login credentials and click btn:[Validate].
+. If editing multiple hosts, select a host from the #Select Host to validate against# list; provide the VMware ESXi login credentials and click btn:[Validate].
 . Click btn:[Save].
 
 == Using a Non-Administrator Account for Host Credentials
