--- a/doc-Managing_Providers/topics/Discovering_Amazon_EC2_Cloud_Providers.adoc
+++ b/doc-Managing_Providers/topics/Discovering_Amazon_EC2_Cloud_Providers.adoc
@@ -4,8 +4,8 @@ CloudForms Management Engine provides the ability to discover cloud providers as
 
 . Navigate to menu:Clouds[Providers].
 . Click  image:images/1847.png[] btn:[(Configuration)], then click image:images/2119.png[] btn:[(Discover Cloud Providers)].
-. Select Amazon EC2 from the [label]#Discover Type# list.
-. Enter your Amazon EC2 [label]#User ID# and [label]#Password#.
-  Reenter your password in the [label]#Verify Password# field.
+. Select Amazon EC2 from the #Discover Type# list.
+. Enter your Amazon EC2 #User ID# and #Password#.
+  Reenter your password in the #Verify Password# field.
 . Click btn:[Start].
 
