--- a/doc-Managing_Providers/topics/Discovering_Azure_Providers.adoc
+++ b/doc-Managing_Providers/topics/Discovering_Azure_Providers.adoc
@@ -5,7 +5,7 @@ CloudForms Management Engine provides the ability to discover a set of Microsoft
 .Procedure: To Discover an Azure Provider
 . Navigate to menu:Clouds[Providers]. 
 . Click  image:images/1847.png[] btn:[(Configuration)], then click image:images/2119.png[] btn:[(Discover Cloud Providers)].
-. Select Azure from the [label]#Discover Type# list.
-. In the Credentials section, enter the [label]#Client ID#, [label]#Client Key#, and [label]#Azure Tenant ID#.
+. Select Azure from the #Discover Type# list.
+. In the Credentials section, enter the #Client ID#, #Client Key#, and #Azure Tenant ID#.
 . Click btn:[Start].
 
