--- a/doc-Managing_Providers/topics/Editing_a_Containers_Provider.adoc
+++ b/doc-Managing_Providers/topics/Editing_a_Containers_Provider.adoc
@@ -6,13 +6,13 @@ Edit information about a provider such as the name, hostname, IP address or port
 . Navigate to menu:Containers[Providers]. 
 . Click the containers provider to edit. 
 . Click  image:images/1847.png[] btn:[Configuration], and then  image:images/1851.png[]btn:[Edit Selected Containers Provider].
-. Edit the [label]#Basic Information#.
-  This varies depending on the [label]#Type# of provider. 
+. Edit the #Basic Information#.
+  This varies depending on the #Type# of provider. 
 +
-NOTE: The [label]#Type# value is unchangeable.
+NOTE: The #Type# value is unchangeable.
 To use a different containers provider, create a new one. 
 +
-. Edit the [label]#Credentials# by typing in a new [label]#Token#. 
-. Click [label]#Validate# and wait for notification of successful validation. 
+. Edit the #Credentials# by typing in a new #Token#. 
+. Click #Validate# and wait for notification of successful validation. 
 . Click btn:[Save].
 
