--- a/doc-Managing_Providers/topics/Tagging_Cloud_Providers.adoc
+++ b/doc-Managing_Providers/topics/Tagging_Cloud_Providers.adoc
@@ -7,7 +7,7 @@ Before assigning tags, create them using instructions in the _General Configurat
 . Navigate to menu:Clouds[Providers]. 
 . Select the checkboxes for the Cloud Providers to tag. 
 . Click  image:images/1941.png[] btn:[(Policy)], and then  image:images/2158.png[] btn:[(Edit Tags)]. 
-. [label]#Select a customer tag to assign# from the first list. 
+. #Select a customer tag to assign# from the first list. 
 +
 
 image::images/2219.png[]
