--- a/doc-Managing_Providers/topics/Tagging_Multiple_Management_Systems.adoc
+++ b/doc-Managing_Providers/topics/Tagging_Multiple_Management_Systems.adoc
@@ -7,7 +7,7 @@ Before assigning tags, create them using instructions in the _General Configurat
 . Navigate to menu:Infrastructure[Providers]. 
 . Check the providers to tag. 
 . Click  image:images/1941.png[] (btn:[Policy]), and then  image:images/2158.png[] (btn:[Edit Tags]). 
-. In the [label]#Tag Assignment# area, select a customer tag to assign from the first list, then select a value to assign from the second list.
+. In the #Tag Assignment# area, select a customer tag to assign from the first list, then select a value to assign from the second list.
 +
 
 image::images/2194.png[]
