--- a/doc-Managing_Providers/topics/Viewing_Hosts_and_Clusters.adoc
+++ b/doc-Managing_Providers/topics/Viewing_Hosts_and_Clusters.adoc
@@ -1,10 +1,10 @@
 = Viewing Hosts and Clusters
 
-Access a tree view of the hosts and clusters for a provider from the [label]#Provider Summary#. 
+Access a tree view of the hosts and clusters for a provider from the #Provider Summary#. 
 
 . Navigate to menu:Infrastructure[Providers]. 
 . Click the provider to view the hosts and clusters. 
-. Click on the [label]#Relationships# accordion, then click [label]#'Hosts & Clusters'#. 
+. Click on the #Relationships# accordion, then click #'Hosts & Clusters'#. 
 
 
 image::images/hostsandclusters.png[]
