--- a/doc-Managing_Providers/topics/Viewing_a_Cloud_Providers_Timeline.adoc
+++ b/doc-Managing_Providers/topics/Viewing_a_Cloud_Providers_Timeline.adoc
@@ -6,14 +6,14 @@ View the timeline of events for instances registered to a cloud provider.
 . Navigate to menu:Clouds[Providers]. 
 . Click the desired cloud provider for viewing the timeline. 
 . Click  image:images/1994.png[] btn:[(Monitoring)], and then  image:images/1995.png[] btn:[(Timelines)]. 
-. From [label]#Options#, customize the period of time to display and the types of events to see. 
+. From #Options#, customize the period of time to display and the types of events to see. 
 +
-* Use [label]#Show# to select regular Management Events or Policy Events. 
-* Use the [label]#Type# list to select hourly or daily data points. 
-* Use [label]#Date# to type the date for the timeline to display. 
-* If you select to view a daily timeline, use [label]#Show# to set how many days back to go.
+* Use #Show# to select regular Management Events or Policy Events. 
+* Use the #Type# list to select hourly or daily data points. 
+* Use #Date# to type the date for the timeline to display. 
+* If you select to view a daily timeline, use #Show# to set how many days back to go.
   The maximum history is 31 days. 
-* The three [label]#Event Groups# list allow you to select different groups of events to display.
+* The three #Event Groups# list allow you to select different groups of events to display.
   Each has its own color. 
-* From the [label]#Level# list, select a [label]#Summary# event, or a [label]#Detail# list of events.
+* From the #Level# list, select a #Summary# event, or a #Detail# list of events.
 
